package bbk_beam.mtRooms.engine.operation;

public interface ILogisticReportGenerator {
}
