package bbk_beam.mtRooms.customer;

public interface ICustomerAccount {
}
